--- a/final-front/package.json
+++ b/final-front/package.json
@@ -13,6 +13,7 @@
     "bootstrap-vue": "^2.19.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.12",
+    "vue-infinite-loading": "^2.4.5",
     "vue-router": "^3.2.0",
     "vue-stack-grid": "^1.2.1",
     "vuex": "^3.4.0"
