--- a/final-front/package.json
+++ b/final-front/package.json
@@ -16,6 +16,7 @@
     "vue-infinite-loading": "^2.4.5",
     "vue-router": "^3.2.0",
     "vue-stack-grid": "^1.2.1",
+    "vue-youtube": "^1.4.0",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
