--- a/final-front/package.json
+++ b/final-front/package.json
@@ -13,10 +13,12 @@
     "bootstrap-vue": "^2.19.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.12",
+    "vue-autosuggest": "^2.2.0",
     "vue-infinite-loading": "^2.4.5",
     "vue-router": "^3.2.0",
     "vue-stack-grid": "^1.2.1",
     "vue-youtube": "^1.4.0",
+    "vuetify": "^2.3.19",
     "vuex": "^3.4.0",
     "vuex-persistedstate": "^4.0.0-beta.1"
   },
